add postgres and grafana

--- a/roles/grafana/templates/grafana.ini.j2
+++ b/roles/grafana/templates/grafana.ini.j2
@@ -1,9 +1,9 @@
 [database]
 type = postgres
 host = 127.0.0.1:5432
-name = {{graphite_db_name}}
-user = {{graphite_db_user}}
-password = {{graphite_db_pass}}
+name = {{grafana_db_name}}
+user = {{grafana_db_user}}
+password = {{grafana_db_pass}}
 
 [server]
 protocol = http
